--- a/alquimia-front/src/index.html
+++ b/alquimia-front/src/index.html
@@ -5,7 +5,7 @@
   <title>Alquimia Home Deco</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon_admin.png">
 </head>
 <body>
   <app-root></app-root>
